# Medical

./: .gitignore
Slicer/Docs/reproduction_plan/: 00-overview.md
front/: CMakeLists.txt  CMakeUserPresets.json  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
front/app/: AppController.cpp  AppController.h
front/core/: VolumeNode.cpp  VolumeNode.h
front/database/: DatabaseManager.cpp  DatabaseManager.h  DicomRepository.cpp  DicomRepository.h
front/viewer/: MedicalViewportWidget.cpp  MedicalViewportWidget.h  ViewLayoutWidget.cpp  ViewLayoutWidget.h  VtkImageDataFactory.cpp  VtkImageDataFactory.h
front/widgets/: LogPanelWidget.cpp  LogPanelWidget.h  ProjectPanelWidget.cpp  ProjectPanelWidget.h  RibbonBarWidget.cpp  RibbonBarWidget.h
